# query-compile-prototype

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: error.rs  lib.rs
core/: Cargo.toml
core/src/: gen.rs  jit.rs  lib.rs
core/src/jit/: build.rs  mod.rs  native_opcall.rs
execution/: Cargo.toml
execution/src/: context.rs
experiment/: Cargo.toml
experiment/benches/: expr_bench.rs  expr_calc.rs  scalar_calc.rs
experiment/src/: expr.rs  jit_expr.asm  jit_expr_v1.asm  jit_expr_v2.asm  jit_expr_v3.asm  lib.rs
learn/: Cargo.toml
learn/src/: arrow_array.rs  arrow_types.rs  cranelift_jit.rs  learn_array.rs  learn_egg.rs  learn_jit.rs  lib.rs  llvm_jit.rs  portable_simd.rs  rust_ffi.rs
physical-expr/: Cargo.toml
physical-expr/benches/: experiment.rs  expr_experiment.rs
physical-expr/src/: jit.rs  lib.rs
physical-expr/src/expr/: binary.rs  column.rs  literal.rs  mod.rs
physical-operator/: Cargo.toml
physical-operator/src/: lib.rs
physical-operator/src/operator/: filter.rs  mod.rs
physical-operator/src/source/: mem.rs
src/: main.rs
