[workspace]
members = ["common", "core", "physical-operator", "physical-expr", "execution"]
resolver = "2"

[workspace.package]
name = "query-compile-prototype"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
arrow = "50"
common = { path = "./common" }
core = { path = "./core" }
execution = { path = "./execution" }
physical-expr = { path = "./physical-expr" }
physical-operator = { path = "./physical-operator" }
