[workspace]
members = [
    "common",
    "core",
    "physical-operator",
    "physical-expr",
    "execution",
    "learn",
    "experiment",
]
resolver = "2"

[workspace.package]
name = "query-compile-prototype"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
arrow = "50"
common = { path = "./common" }
core = { path = "./core" }
execution = { path = "./execution" }
physical-expr = { path = "./physical-expr" }
physical-operator = { path = "./physical-operator" }

[build]
# rustflags = ["dwarf-version=4"]
rustflags = ["-Z", "threads=8"]

[profile.release]
# codegen-units = 1
# lto = "fat"
