[package]
name = "core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
arrow = { workspace = true }
cranelift = "0.104.1"
cranelift-jit = "0.104.1"
cranelift-module = "0.104.1"
cranelift-native = "0.104.1"
smallvec = "1.13"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
